--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -68,7 +68,29 @@
  swedish_restoration_of_the_military: "Restoration of Military Glory"
  swedish_restoration_of_the_military_reason: "The Swedish military has been wounded since the loss of Finland and despite reforms being made and corruption being on an all-time low, it is clear that the pride of our military is wounded. Things need to change for it to become better."
  has_completed_champions_of_national_defense: "Has completed Question of National Defense Journal Entry"
- 
+ swedish_glasriket: "The Kingdom of Glass"
+ swedish_glasriket_reason: "Develop Småland's unique glassmaking traditions into a thriving industrial and artistic powerhouse, capturing both domestic and international markets."
+ swedish_sundsvall_timber: "Sundsvall: The Timber Capital"
+ swedish_sundsvall_timber_reason: "Sundsvall's sawmills are operating at an unprecedented scale, solidifying its position as the undisputed heart of Sweden's booming timber industry and a global export hub."
+ swedish_retake_finland: "Reclaiming Finland"
+ swedish_retake_finland_reason: "More than a century has passed since Finland was cruelly severed from our dominion, and the tyranny of the Eastern Bear has weighed heavily upon the Finnish people. Yet, the winds of change are stirring. With renewed strength and cunning, we may now possess the means to reclaim what is rightfully ours and liberate our long-suffering brethren."
+ swedish_abolish_estates: "Abolishing the Old Order"
+ swedish_abolish_estates_reason: "Confront the anachronistic Riksdag of the Estates and usher in a modern, representative parliamentary system for Sweden, reflecting the will of all citizens."
+ swedish_timber_export: "The Green Gold Export"
+ swedish_timber_export_reason: "Our abundant forests are a blessing, but exporting raw timber may not be the most profitable path. We must consider how to best utilize this national resource."
+ swedish_stockholm_urban_growth: "Metropolitan Ambition: Stockholm"
+ swedish_stockholm_urban_growth_reason: "Our capital, Stockholm, is undergoing a dramatic transformation, evolving from a historic city into a bustling, modern metropolis, with all the challenges and opportunities that entails."
+ swedish_malmo_industrial_boom: "Metropolitan Ambition: Malmö"
+ swedish_malmo_industrial_boom_reason: "Malmö, strategically positioned at the gateway to Europe, is poised for a period of rapid industrial growth, fueled by its port and railway connections. We must capitalize on its potential."
+ swedish_mortala_verkstad: "The Motala Workshop"
+ swedish_mortala_verkstad_reason: "Capitalize on the legacy of the Göta Canal by transforming Motala Verkstad into Sweden's industrial crown jewel."
+ swedish_iron_industry: "The Dual Iron vein of Sweden"
+ swedish_iron_industry_reason: "Bergslagen, Sweden's ancient mining district and the newly discovered Malberget holds the key to our industrial future. Modernizing its operations is essential to meet the burgeoning demand for metals."
+ swedish_folkhemmet: "The People's Home"
+ swedish_folkhemmet_reason: "Embark on the ambitious project of building a socially equitable and prosperous society, ensuring welfare and security for all citizens, from cradle to grave."
+ swedish_gothenburg_port_expansion: "Metropolitan Ambition: Gothenburg"
+ swedish_gothenburg_port_expansion_reason: "As industrialization takes hold and emigration swells, Gothenburg's role as Sweden's premier western port becomes ever more critical. Expanding its capacity is vital for our trade and global connections."
+
  nor_the_great_transformation: "The Great Transformation"
  nor_the_great_transformation_reason: "Norway has taken the first steps towards industrialising it's industries, all it got to do now is to become more reliant on itself to become a competetive force in the Western world."
  nor_the_merchant_navy: "Norwegian Merchant Marine"
@@ -78,6 +100,7 @@
  finland_fennoman_movement_goal: "The Language Strife has gone on for 20 years without being undermined by the Old Swedish Elite."
  finland_fennoman_movement_reason: "There is a national awakening in Finland, springing up from the Swedish-speaking upper classes who has chosen to promote Finnish culture and language. These Finnish Swedes has become known as the Fennomans, but it's clear that there is opposition to this within our country..."
  has_made_too_many_concessions_to_swedes: "Has made too many concessions to the Old Swedish Elite"
+ 
  # Decisions
  the_norway_formannskapsdistrikt: "Foundation of Formannskapsdistrikt"
  the_norway_formannskapsdistrikt_desc: "The Parliament of Norway has prepared to approve a bill that would create a system of municipalities and reorganise the parishes of the Church of Norway into administrative districts. This should create 396 Formannskapsdistrikt once done."
@@ -179,6 +202,27 @@
  focus_on_integration: "Integrating the Nation"
  focus_on_power: "Focus on Power"
  focus_on_economy: "Focus on Economy"
+ sweden_stockholm: "Stockholm"
+ sweden_sundsvall_fire: "Sundsvalls Rebirth"
+ sweden_matchstick_boom: "Swedish Matchstick Supremacy"
+ sweden_stockholm_exhibition: "Stockholm Exhibition"
+ sweden_lasare_movement: "Spiritual Awakening"
+ sweden_church_support: "Church Support"
+ sweden_temperance_revival: "Temperance movement"
+ sweden_trapatron: "Träpatroners Influence"
+ sweden_motala_strike: "Labor Unrest"
+ sweden_nobel_dynamite: "Dynamites Impact"
+ sweden_malmo: "Malmö"
+ sweden_gothenburg: "Göteborg"
+ sweden_railway_development: "Railway Development"
+ sweden_timber_export: "Timber Export"
+ sweden_abolish_estates: "Modern Parliamentary System"
+ sweden_folkhemmet: "Building the Peoples Home"
+ sweden_iron_production: "Swedish Iron Prowess"
+ sweden_retake_finland: "Finland reclaimed"
+ sweden_sundsvall_timber: "Sundsvall"
+ sweden_good_glass_quality: "Glasriket"
+ sweden_mortala_verkstad: "Motalas Industrial Prowess"
 
 # State Traits
  ttb_state_trait_north_pole: "North Pole"
