--- a/localization/english/ttb_events_l_english.yml
+++ b/localization/english/ttb_events_l_english.yml
@@ -81,8 +81,8 @@
  sweden_flavor.10.f: "The joy of reunion washes over the land; our brave Finnish kin are at last brought home, where they belong."
  sweden_flavor.10.a: "Embrace Our Liberated Brothers!"
 
- sweden_flavor.11.t: "Forging the Future of Bergslagen"
- sweden_flavor.11.d: "For centuries deep mines of Bergslagen have supplied the iron and copper that form the backbone of Swedish industry. However, as the world advances, demanding higher quantity and quality of metal, our traditional methods risk falling behind. We face a critical choice: invest heavily in modernizing these ancient operations or risk losing our competitive edge in the global market."
+ sweden_flavor.11.t: "Forging the Future of Mining"
+ sweden_flavor.11.d: "For centuries deep mines of Bergslagen and the newly discovered Malberget have supplied the iron and copper that form the backbone of Swedish industry. However, as the world advances, demanding higher quantity and quality of metal, our traditional methods risk falling behind. We face a critical choice: invest heavily in modernizing these ancient operations or risk losing our competitive edge in the global market."
  sweden_flavor.11.f: "Awaken the heart of swedish pride"
  sweden_flavor.11.a: "Launch a national modernization program."
 
