--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -84,7 +84,7 @@
  swedish_malmo_industrial_boom_reason: "Malmö, strategically positioned at the gateway to Europe, is poised for a period of rapid industrial growth, fueled by its port and railway connections. We must capitalize on its potential."
  swedish_mortala_verkstad: "The Motala Workshop"
  swedish_mortala_verkstad_reason: "Capitalize on the legacy of the Göta Canal by transforming Motala Verkstad into Sweden's industrial crown jewel."
- swedish_iron_industry: "The Dual Iron vein of Sweden"
+ swedish_iron_industry: "The Iron Heart Awakens"
  swedish_iron_industry_reason: "Bergslagen, Sweden's ancient mining district and the newly discovered Malberget holds the key to our industrial future. Modernizing its operations is essential to meet the burgeoning demand for metals."
  swedish_folkhemmet: "The People's Home"
  swedish_folkhemmet_reason: "Embark on the ambitious project of building a socially equitable and prosperous society, ensuring welfare and security for all citizens, from cradle to grave."
