--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -44,6 +44,7 @@
  denmark_return_of_danish_dominance: "The Unitary State"
  denmark_return_of_danish_dominance_reason: "The [SCOPE.sCountry('den_scope').GetAdjectiveNoFormatting] realm is a royal personal union comprised of the crown of #yellow the Kingdom of #! [SCOPE.sCountry('den_scope').GetName], and the southern fiefs of #yellow the Duchy of #! [SCOPE.sCountry('sch_scope').GetName] and #yellow the Duchy of #! [SCOPE.sCountry('hol_scope').GetName]. Together, it is called #O the Unitary State#!.\n\nHowever, it is far from culturally unitary. While chiefly Danish in the rest of the realm, Germans are the predominant ethnicity in Schleswig-Holstein. Additionally, the more-or-less defunct German Confederation continues to claim that Holstein is part of it.\n\nAs a result of this situation, #O the Unitary State #!is entangled in #O the Schleswig-Holstein Question#!."
  denmark_return_of_danish_dominance_status: "Domestic aspirations to preserve and consolidate the Unitary State, faced with German ambitions to unify the German lands, will no doubt bring things to a head..."
+ je_danish_unitary_state_complete_trigger_tt: "The southern fiefs and their territories have been integrated into the [SCOPE.sCountry('den_scope').GetAdjectiveNoFormatting] crown proper, and the realm is at peace"
  has_no_control_over_holstein_or_scania: "Has lost all control over Schelswig-Holstein and Scania."
  je_springtime_of_the_peoples_den: "Springtime of the Peoples"
  je_springtime_of_the_peoples_den_reason: "The call for liberal revolution is spreading throughout Denmark."
