--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -85,13 +85,15 @@
  swedish_malmo_industrial_boom: "Metropolitan Ambition: Malmö"
  swedish_malmo_industrial_boom_reason: "Malmö, strategically positioned at the gateway to Europe, is poised for a period of rapid industrial growth, fueled by its port and railway connections. We must capitalize on its potential."
  swedish_mortala_verkstad: "The Motala Workshop"
- swedish_mortala_verkstad_reason: "Capitalize on the legacy of the Göta Canal by transforming Motala Verkstad into Sweden's industrial crown jewel."
+ swedish_mortala_verkstad_reason: "Capitalize on the legacy of the Göta Canal by transforming #yellow Motala Verkstad#! into Sweden's industrial crown jewel."
  swedish_iron_industry: "The Iron Heart Awakens"
- swedish_iron_industry_reason: "Bergslagen, Sweden's ancient mining district and the newly discovered Malberget holds the key to our industrial future. Modernizing its operations is essential to meet the burgeoning demand for metals."
+ swedish_iron_industry_reason: " #yellow Bergslagen#!, Sweden's ancient mining district and the newly discovered #yellow Malberget#! holds the key to our industrial future. Modernizing its operations is essential to meet the burgeoning demand for metals."
  swedish_folkhemmet: "The People's Home"
  swedish_folkhemmet_reason: "Embark on the ambitious project of building a socially equitable and prosperous society, ensuring welfare and security for all citizens, from cradle to grave."
  swedish_gothenburg_port_expansion: "Metropolitan Ambition: Gothenburg"
  swedish_gothenburg_port_expansion_reason: "As industrialization takes hold and emigration swells, Gothenburg's role as Sweden's premier western port becomes ever more critical. Expanding its capacity is vital for our trade and global connections."
+ swedish_reklam_the_eastern_land: "Reclaim the Eastern Territories"
+ swedish_reklam_the_eastern_land_reason: "Our most eastern territories were ceded by the #yellow Treaty of Nystad#! in 1721. While their reclamation has been a long-held aspiration, now, in the wake of our decisive #yellow Victory in Finland#!, Russia finds itself weakened. This presents a unique window of opportunity to potentially regain these lands, and we should consider acting decisively."
 
  nor_the_great_transformation: "The Great Transformation"
  nor_the_great_transformation_reason: "Norway has taken the first steps towards industrialising it's industries, all it got to do now is to become more reliant on itself to become a competetive force in the Western world."
