changed slavery event,color to je's easier to read

--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -64,26 +64,26 @@
  swedish_champions_of_national_defence: "Question of National Defense"
  swedish_champions_of_national_defence_reason: "The Swedish army is in a sorry state and it has had a negative effect on our international standing."
  swedish_the_trade_problems: "The Trade Discussion"
- swedish_the_trade_problems_reason: "There have been arguments between the Rural Folks and the supporters of a Free Market about the future of the trade in Sweden."
+ swedish_the_trade_problems_reason: "There have been arguments between the #green Rural Folks#! and the supporters of a #yellow Free Market#! about the future of the trade in Sweden."
  swedish_the_end_of_lantmanna_party: "End of Agrarian Politics"
- swedish_the_end_of_lantmanna_party_reason: "Recent shifts in politics has made Agrarian Politics less and less relevant in modern politics."
+ swedish_the_end_of_lantmanna_party_reason: "Recent shifts in politics has made #green Agrarian Politics#! less and less relevant in modern politics."
  swedish_restoration_of_the_military: "Restoration of Military Glory"
- swedish_restoration_of_the_military_reason: "The Swedish military has been wounded since the loss of Finland and despite reforms being made and corruption being on an all-time low, it is clear that the pride of our military is wounded. Things need to change for it to become better."
+ swedish_restoration_of_the_military_reason: "The #yellow Swedish military#! has been wounded since the loss of #yellow Finland#! and despite reforms being made and corruption being on an all-time low, it is clear that the pride of our military is wounded. Things need to change for it to become better."
  has_completed_champions_of_national_defense: "Has completed Question of National Defense Journal Entry"
  swedish_glasriket: "The Kingdom of Glass"
  swedish_glasriket_reason: "Develop Småland's unique glassmaking traditions into a thriving industrial and artistic powerhouse, capturing both domestic and international markets."
  swedish_sundsvall_timber: "Sundsvall: The Timber Capital"
  swedish_sundsvall_timber_reason: "Sundsvall's sawmills are operating at an unprecedented scale, solidifying its position as the undisputed heart of Sweden's booming timber industry and a global export hub."
  swedish_retake_finland: "Reclaiming Finland"
- swedish_retake_finland_reason: "More than a century has passed since Finland was cruelly severed from our dominion, and the tyranny of the Eastern Bear has weighed heavily upon the Finnish people. Yet, the winds of change are stirring. With renewed strength and cunning, we may now possess the means to reclaim what is rightfully ours and liberate our long-suffering brethren."
+ swedish_retake_finland_reason: "More than a century has passed since #yellow Finland#! was cruelly severed from our dominion, and the tyranny of the #r Eastern Bear#! has weighed heavily upon the Finnish people. Yet, the winds of change are stirring. With renewed strength and cunning, we may now possess the means to reclaim what is rightfully ours and liberate our long-suffering brethren."
  swedish_abolish_estates: "Abolishing the Old Order"
  swedish_abolish_estates_reason: "Confront the anachronistic Riksdag of the Estates and usher in a modern, representative parliamentary system for Sweden, reflecting the will of all citizens."
  swedish_timber_export: "The Green Gold Export"
  swedish_timber_export_reason: "Our abundant forests are a blessing, but exporting raw timber may not be the most profitable path. We must consider how to best utilize this national resource."
  swedish_stockholm_urban_growth: "Metropolitan Ambition: Stockholm"
- swedish_stockholm_urban_growth_reason: "Our capital, Stockholm, is undergoing a dramatic transformation, evolving from a historic city into a bustling, modern metropolis, with all the challenges and opportunities that entails."
+ swedish_stockholm_urban_growth_reason: "Our capital, #yellow Stockholm#!, is undergoing a dramatic transformation, evolving from a historic city into a bustling, modern metropolis, with all the challenges and opportunities that entails."
  swedish_malmo_industrial_boom: "Metropolitan Ambition: Malmö"
- swedish_malmo_industrial_boom_reason: "Malmö, strategically positioned at the gateway to Europe, is poised for a period of rapid industrial growth, fueled by its port and railway connections. We must capitalize on its potential."
+ swedish_malmo_industrial_boom_reason: "#yellow Malmö#!, strategically positioned at the gateway to Europe, is poised for a period of rapid industrial growth, fueled by its port and railway connections. We must capitalize on its potential."
  swedish_mortala_verkstad: "The Motala Workshop"
  swedish_mortala_verkstad_reason: "Capitalize on the legacy of the Göta Canal by transforming #yellow Motala Verkstad#! into Sweden's industrial crown jewel."
  swedish_iron_industry: "The Iron Heart Awakens"
@@ -91,9 +91,9 @@
  swedish_folkhemmet: "The People's Home"
  swedish_folkhemmet_reason: "Embark on the ambitious project of building a socially equitable and prosperous society, ensuring welfare and security for all citizens, from cradle to grave."
  swedish_gothenburg_port_expansion: "Metropolitan Ambition: Gothenburg"
- swedish_gothenburg_port_expansion_reason: "As industrialization takes hold and emigration swells, Gothenburg's role as Sweden's premier western port becomes ever more critical. Expanding its capacity is vital for our trade and global connections."
+ swedish_gothenburg_port_expansion_reason: "As industrialization takes hold and emigration swells, #yellow Gothenburg's#! role as Sweden's premier western port becomes ever more critical. Expanding its capacity is vital for our trade and global connections."
  swedish_reklam_the_eastern_land: "Reclaim the Eastern Territories"
- swedish_reklam_the_eastern_land_reason: "Our most eastern territories were ceded by the #yellow Treaty of Nystad#! in 1721. While their reclamation has been a long-held aspiration, now, in the wake of our decisive #yellow Victory in Finland#!, Russia finds itself weakened. This presents a unique window of opportunity to potentially regain these lands, and we should consider acting decisively."
+ swedish_reklam_the_eastern_land_reason: "Our most eastern territories were ceded by the #yellow Treaty of Nystad#! in 1721. While their reclamation has been a long-held aspiration, now, in the wake of our decisive #yellow Victory in Finland#!, #r Russia#! finds itself weakened. This presents a unique window of opportunity to potentially regain these lands, and we should consider acting decisively."
 
  nor_the_great_transformation: "The Great Transformation"
  nor_the_great_transformation_reason: "Norway has taken the first steps towards industrialising it's industries, all it got to do now is to become more reliant on itself to become a competetive force in the Western world."
